# security-scanner

./: example.config.yaml  main.py  pyproject.toml
core/: __init__.py  config.py  keepalive.py  listener.py  runner.py
pipeline/: __init__.py
pipeline/scanners/: __init__.py  malicious.py  tokens.py
types_/: config.py  pastes.py
